<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_3">


    <TextView
        android:id="@+id/textotecla"
        android:layout_width="202dp"
        android:layout_height="27dp"
        android:layout_marginBottom="352dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/btn1"
        android:layout_width="53dp"
        android:layout_height="48dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="#4CAF50"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/_1"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btn7"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="53dp"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#4CAF50"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/_2"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn1"
        app:layout_constraintEnd_toStartOf="@+id/btn3"
        app:layout_constraintTop_toTopOf="@+id/btn1"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="53dp"
        android:layout_height="48dp"
        android:layout_marginEnd="168dp"
        android:text="@string/_3"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:backgroundTint="#4CAF50"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="53dp"
        android:layout_height="48dp"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#4CAF50"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/_4"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btn7"
        app:layout_constraintEnd_toStartOf="@+id/btn5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="53dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:text="@string/_5"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:backgroundTint="#4CAF50"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn4"
        app:layout_constraintEnd_toStartOf="@+id/btn6"
        app:layout_constraintTop_toTopOf="@+id/btn4"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="53dp"
        android:layout_height="48dp"
        android:layout_marginEnd="168dp"
        android:text="@string/ç"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:backgroundTint="#4CAF50"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn5"
        app:layout_constraintVertical_bias="1.0" />


    <Button
        android:id="@+id/btn7"
        android:layout_width="53dp"
        android:layout_height="48dp"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="60dp"
        android:text="@string/_7"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:backgroundTint="#4CAF50"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/btn8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="53dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:text="@string/_8"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:backgroundTint="#4CAF50"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn7"
        app:layout_constraintEnd_toStartOf="@+id/btn9"
        app:layout_constraintTop_toTopOf="@+id/btn7" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="53dp"
        android:layout_height="48dp"
        android:layout_marginEnd="168dp"
        android:text="@string/_9"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:backgroundTint="#4CAF50"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn8" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="202dp"
        android:layout_height="27dp"
        android:layout_marginBottom="32dp"
        android:text="@string/la_tecla_que_has_tocaco_es"
        app:layout_constraintBottom_toTopOf="@+id/textotecla"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>