<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_3">


    <TextView
        android:id="@+id/textotecla"
        android:layout_width="202dp"
        android:layout_height="27dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="53dp"
        android:layout_height="48dp"
        android:backgroundTint="#4CAF50"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/_3"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btn6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="53dp"
        android:layout_height="48dp"
        android:backgroundTint="#4CAF50"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/_1"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btn4"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btn2"
        android:layout_width="53dp"
        android:layout_height="48dp"
        android:backgroundTint="#4CAF50"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/_2"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btn5"
        app:layout_constraintEnd_toStartOf="@+id/btn3"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintTop_toTopOf="parent"
        />


    <Button
        android:id="@+id/btn4"
        android:layout_width="53dp"
        android:layout_height="48dp"
        android:backgroundTint="#4CAF50"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/_4"
        android:textColor="@color/black"

        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn1"
        app:layout_constraintEnd_toStartOf="@id/btn5"
        app:layout_constraintBottom_toTopOf="@id/btn7"
        tools:layout_editor_absoluteY="101dp" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="53dp"
        android:layout_height="48dp"
        android:backgroundTint="#4CAF50"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/_5"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btn8"
        app:layout_constraintStart_toEndOf="@id/btn4"
        app:layout_constraintEnd_toStartOf="@id/btn6"
        app:layout_constraintTop_toBottomOf="@id/btn2"
        tools:layout_editor_absoluteX="95dp" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="53dp"
        android:layout_height="48dp"
        android:backgroundTint="#4CAF50"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/ç"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btn9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn5"
        app:layout_constraintTop_toBottomOf="@id/btn3"/>

    <Button
        android:id="@+id/btn7"
        android:layout_width="53dp"
        android:layout_height="48dp"
        android:backgroundTint="#4CAF50"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/_7"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/btn8"
        app:layout_constraintTop_toBottomOf="@id/btn4"
        app:layout_constraintBottom_toTopOf="@id/textView3"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn8"
        android:layout_width="53dp"
        android:layout_height="48dp"
        android:backgroundTint="#4CAF50"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/_8"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/btn5"
        app:layout_constraintBottom_toTopOf="@id/textView3"
        app:layout_constraintStart_toEndOf="@id/btn7"
        app:layout_constraintEnd_toStartOf="@id/btn9"
        />

    <Button
        android:id="@+id/btn9"
        android:layout_width="53dp"
        android:layout_height="48dp"
        android:backgroundTint="#4CAF50"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/_9"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/btn6"
        app:layout_constraintBottom_toTopOf="@id/textView3"
        app:layout_constraintStart_toEndOf="@id/btn8"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="202dp"
        android:layout_height="27dp"
        android:layout_marginBottom="20dp"
        android:text="La tecla que has tocado es: "
        app:layout_constraintBottom_toTopOf="@+id/textotecla"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="287dp"
        android:layout_height="28dp"
        android:layout_marginBottom="28dp"
        android:text="Introduce el número de pastillas a tomar: "
        app:layout_constraintBottom_toTopOf="@+id/nPastillas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/nPastillas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="264dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>